--- a/环境准备.md
+++ b/环境准备.md
@@ -7,3 +7,56 @@ typora-root-url: /images
 ## spring基础架构图
 
 ![](/1.png)
+
+
+
+
+
+![](/2.png)
+
+
+
+## spring-core
+
+* 包含框架基本的核心工具类，其他组件都要使用到这个包里的类
+* 定义并提供资源的访问方式
+
+IOC&DI提供最基础的服务
+
+
+
+## spring-beans
+
+spring主要面向bean编程（bop）
+
+bean的定义、解析、创建
+
+最重要的接口是 **BeanFactory**
+
+## spring-context
+
+核心: ApplicationContext
+
+* 为spring提供了运行时环境，保存对象的状态
+* 扩展了 BeanFactory
+
+## spring-aop
+
+最小化的动态代理实现
+
+* jdk动态代理
+* 基于类 cglib
+* 只能使用运行时织入，仅支持方法级编织，仅支持方法执行切入点
+
+根据模块里的gradle来查看依赖关系
+
+## spring-aspectj+spring-instrument: full aspectj
+
+* 编译器Weaving
+* 类加载器Weaving
+* 运行期Weaving
+
+![](/3.png)
+
+
+
