--- a/环境准备.md
+++ b/环境准备.md
@@ -162,3 +162,375 @@ load/unload modules 排序spring-aspect
 
 重新编译  idea上面的build project
 
+
+
+
+
+在源码根目录下面创建一个module  gradle 
+
+gradle 和 maven 是不能共存的
+
+![](/5.png)
+
+
+
+这个自己创建的包用来测试Spring里的服务
+
+
+
+springdemo
+
+Entrance 入口类
+
+```
+package com.spring;
+
+public class Entrance {
+   public static void main(String[] args) {
+      System.out.println("Hello, world");
+   }
+}
+```
+
+设计接口
+
+```
+package com.spring.service;
+
+public interface WelcomeService {
+	String sayHello(String name);
+}
+
+```
+
+
+
+实现类
+
+```java
+package com.spring.service.impl;
+
+import com.spring.service.WelcomeService;
+
+public class WelcomeServiceImpl implements WelcomeService {
+   @Override
+   public String sayHello(String name) {
+      System.out.println("欢迎您！" + name);
+      return "success";
+   }
+}
+```
+
+
+
+需要告诉spring，这是一个bean，需要放到容器里
+
+resources 下面创建 spring 文件夹
+
+spring-config.xml
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.springframework.org/schema/beans
+       http://www.springframework.org/schema/beans/spring-beans.xsd">
+
+</beans>
+```
+
+
+
+spring-config.xml
+
+```
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.springframework.org/schema/beans
+       http://www.springframework.org/schema/beans/spring-beans.xsd">
+   <bean id="welcomeService" class="com.spring.service.impl.WelcomeServiceImpl"></bean>
+</beans>
+```
+
+
+
+用一个类去解析xml文件 spring-context模块下面
+
+spring-demo build.gradle
+
+```gradle
+plugins {
+    id 'java'
+}
+
+group 'org.springframework'
+version '5.2.0.RELEASE'
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile(project(":spring-context"))
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+```
+
+
+
+```
+package com.spring;
+
+import com.spring.service.WelcomeService;
+import org.springframework.context.ApplicationContext;
+import org.springframework.context.support.FileSystemXmlApplicationContext;
+
+public class Entrance {
+   public static void main(String[] args) throws InterruptedException {
+
+      System.out.println("Hello, World!");
+
+      String xmlPath = "D:\\code\\Spring\\spring-framework-5.2.0.RELEASE\\springdemo\\src\\main\\resources\\spring\\spring-config.xml";
+
+      ApplicationContext applicationContext = new FileSystemXmlApplicationContext(xmlPath);
+
+      WelcomeService welcomeService = (WelcomeService) applicationContext.getBean("welcomeService");
+      welcomeService.sayHello("Li Ming");
+
+   }
+}
+```
+
+
+
+如果出现了乱码
+
+vm options
+
+```
+-Dfile.encoding=UTF-8
+```
+
+
+
+
+
+先学好spring 在学习 spring源码
+
+先看spring文档
+
+文档读 overview+core
+
+掌握设计模式，熟悉spring框架的标签和注解的作用
+
+
+
+## 软件版本
+
+GA: general availability 官方正式发布的稳定版本
+
+同质的还有RELEASE， Stable，Final
+
+RC: Release Candidate 发行候选版本，基本不会加入新的功能
+
+Alpha:内部测试版本，bug较多，功能不全
+
+beta： 公开测试版，比alpha版本晚一点，还会加功能，修bug
+
+M： Milestone，开发期发行版本，边开发边发行
+
+
+
+ 
+
+
+
+# 手写spring框架整体介绍及搭建
+
+目的是 更好了解spring
+
+
+
+## web
+
+sevlet + mvc
+
+## Infrastructure
+
+IOC + AOP +Parser 解析相关配置
+
+
+
+新建 project  （file new project）
+
+wudiSpring !!!
+
+```
+<scope>provided</scope>
+```
+
+provided = compile 都使用上 
+
+jar打包  provided 排除  compile 包括
+
+test 只能在测试用到
+
+https://www.cnblogs.com/kingsonfu/p/10342892.html
+
+
+
+pom.xml
+
+```
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>org.example</groupId>
+    <artifactId>wudiSpring</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>javax.servlet.jsp-api</artifactId>
+            <version>2.3.3</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
+</project>
+```
+
+
+
+补充一下 tomcat 和 servlet的关系
+
+https://www.cnblogs.com/whgk/p/6399262.html
+
+```
+package com.spring;
+
+import javax.servlet.ServletException;
+import javax.servlet.annotation.WebServlet;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import java.io.IOException;
+
+@WebServlet("/hello")
+public class HelloServlet extends HttpServlet {
+    @Override
+    protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+        String name = "我的简易框架";
+        req.setAttribute("name", name);
+        req.getRequestDispatcher("/WEB-INF/jsp/hello.jsp").forward(req, resp);
+    }
+}
+```
+
+
+
+
+
+jsp
+
+![](/6.png)
+
+
+
+编译配置
+
+pom.xml
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>org.example</groupId>
+    <artifactId>wudiSpring</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api -->
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>javax.servlet.jsp-api</artifactId>
+            <version>2.3.3</version>
+            <scope>provided</scope>
+        </dependency>
+
+    </dependencies>
+    <build>
+        <finalName>wudiSpring</finalName>
+<!--        <pluginManagement>-->
+            <plugins>
+                <plugin>
+                    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <source>8</source>
+                        <target>8</target>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.tomcat.maven</groupId>
+                    <artifactId>tomcat7-maven-plugin</artifactId>
+                    <version>2.2</version>
+                    <configuration>
+                        <path>/${project.artifactId}</path>
+                    </configuration>
+                </plugin>
+            </plugins>
+<!--        </pluginManagement>-->
+    </build>
+
+</project>
+```
+
+http://localhost:8080/wudiSpring/hello
+
+只有打包war可以让项目不停运行
+
+
+
+
+
+## jsp运行原理
+
+
+
+![](/7.png)
+
+
+
+我们可以查看hello.java文件
+
