--- a/系统架子构建.md
+++ b/系统架子构建.md
@@ -330,3 +330,231 @@ entity bo 加上@Data
 * 泛型方法被调用时，会指定具体类型
 * 核心目标：解决容器类型在编译时候安全检查的问题
 
+
+
+com.demo.generic
+
+
+
+## 泛型类
+
+![](/12.PNG)
+
+泛型的参数不支持基本类型 需要改成包装类
+
+**泛型相关的信息不会进入到运行时阶段 getClass一样**
+
+javac -cp D:\maven-repository\org\projectlombok\lombok\1.18.10\lombok-1
+.18.10.jar *.java
+
+class文件没有泛型信息
+
+## 能否在泛型里面使用具备继承关系的类
+
+* 使用通配符? 但是会使得泛型的类型检查失去意义
+
+  ```java
+  package com.demo.generic;
+  
+  public class Test {
+  //    public static void handleMember(GenericClassExample<Integer> integerGenericClassExample) {
+  //        Integer result = 111 + integerGenericClassExample.getMember();
+  //        System.out.println("result is:" + result);
+  //    }
+  
+      public static void handleMember(GenericClassExample<?> integerGenericClassExample) {
+          Integer result = 111 + (Integer)integerGenericClassExample.getMember();
+          System.out.println("result is:" + result);
+      }
+      public static void main(String[] args) {
+          GenericClassExample<String> g1 = new GenericClassExample<>("143");
+          GenericClassExample<Integer> g2 = new GenericClassExample<>(1432);
+          System.out.println(g1.getMember().getClass());
+          System.out.println(g2.getMember().getClass());
+          System.out.println(g1.getClass());
+          System.out.println(g2.getClass());
+  
+          handleMember(g2);
+  
+      }
+  }
+  ```
+
+* 给泛型加入上边界？extends E
+
+```
+package com.demo.generic;
+
+public class Test {
+//    public static void handleMember(GenericClassExample<Integer> integerGenericClassExample) {
+//        Integer result = 111 + integerGenericClassExample.getMember();
+//        System.out.println("result is:" + result);
+//    }
+
+//    public static void handleMember(GenericClassExample<?> integerGenericClassExample) {
+//        Integer result = 111 + (Integer)integerGenericClassExample.getMember();
+//        System.out.println("result is:" + result);
+//    }
+    public static void handleMember(GenericClassExample<? extends Number> integerGenericClassExample) {
+        Integer result = 111 + (Integer)integerGenericClassExample.getMember();
+        System.out.println("result is:" + result);
+    }
+    public static void main(String[] args) {
+        GenericClassExample<String> g1 = new GenericClassExample<>("143");
+        GenericClassExample<Integer> g2 = new GenericClassExample<>(1432);
+        System.out.println(g1.getMember().getClass());
+        System.out.println(g2.getMember().getClass());
+        System.out.println(g1.getClass());
+        System.out.println(g2.getClass());
+
+        handleMember(g2);
+
+    }
+}
+```
+
+* 给泛型加入下边界 ? super E
+
+```
+package com.demo.generic;
+
+public class Test {
+//    public static void handleMember(GenericClassExample<Integer> integerGenericClassExample) {
+//        Integer result = 111 + integerGenericClassExample.getMember();
+//        System.out.println("result is:" + result);
+//    }
+
+//    public static void handleMember(GenericClassExample<?> integerGenericClassExample) {
+//        Integer result = 111 + (Integer)integerGenericClassExample.getMember();
+//        System.out.println("result is:" + result);
+//    }
+//    public static void handleMember(GenericClassExample<? extends Number> integerGenericClassExample) {
+//        Integer result = 111 + (Integer)integerGenericClassExample.getMember();
+//        System.out.println("result is:" + result);
+//    }
+    public static void handleMember(GenericClassExample<? super Integer> integerGenericClassExample) {
+        Integer result = 111 + (Integer)integerGenericClassExample.getMember();
+        System.out.println("result is:" + result);
+    }
+    public static void main(String[] args) {
+        GenericClassExample<String> g1 = new GenericClassExample<>("143");
+        GenericClassExample<Integer> g2 = new GenericClassExample<>(1432);
+        System.out.println(g1.getMember().getClass());
+        System.out.println(g2.getMember().getClass());
+        System.out.println(g1.getClass());
+        System.out.println(g2.getClass());
+
+        handleMember(g2);
+
+    }
+}
+```
+
+## 泛型接口
+
+与泛型类的用法基本相同，常用于数据类型的生产工厂接口中
+
+```
+package com.demo.generic;
+
+public interface GenericFactory<T,N> {
+    T nextObject();
+    N nextNumber();
+}
+```
+
+## 泛型方法
+
+既能用在泛型类、泛型接口里，也能用在普通类或者接口里
+
+类型E是根据实际传入的参数类型来判断的
+
+```
+public static <E> void printArray(E[] inputArray) {
+    for (E element : inputArray){
+        System.out.printf("%s", element);
+        
+    }
+}
+```
+
+
+
+## 泛型字母的含义
+
+E  集合中使用
+
+T 类型 java类
+
+K key 键
+
+V value 值
+
+N number 数值类型
+
+# Service层代码架子的构建
+
+统一返回结果
+
+```java
+package com.spring.entity.dto;
+
+import lombok.Data;
+
+@Data
+public class Result<T> {
+    // 本次请求结果的的状态码，200表示成功
+    private int code;
+    // 本次请求结果的详情
+    private String msg;
+    // 本次请求返回的结果集
+    private T data;
+}
+```
+
+创建服务接口
+
+```java
+package com.spring.service.solo;
+
+import com.spring.entity.bo.HeadLine;
+import com.spring.entity.dto.Result;
+
+import java.util.List;
+
+public interface HeadLineService {
+    Result<Boolean> addHeadLine(HeadLine headLine);
+    Result<Boolean> removeHeadLine(int headLineId);
+    Result<Boolean> modifyHeadLine(HeadLine headLine);
+    Result<HeadLine> queryHeadLineById(int headLineId);
+    Result<List<HeadLine>> queryHeadLine(HeadLine headLineCondition, int pageIndex, int pageSize);
+    
+}
+```
+
+
+
+```java
+package com.spring.service.solo;
+
+import com.spring.entity.bo.HeadLine;
+import com.spring.entity.bo.ShopCategory;
+import com.spring.entity.dto.Result;
+
+import java.util.List;
+
+public interface ShopCategoryService {
+    Result<Boolean> addShopCategory(ShopCategory shopCategory);
+    Result<Boolean> removeShopCategory(int shopCategoryId);
+    Result<Boolean> modifyShopCategory(ShopCategory shopCategory);
+    Result<ShopCategory> queryShopCategoryById(int shopCategoryId);
+    Result<List<ShopCategory>> queryShopCategory(ShopCategory shopCategoryCondition, int pageIndex, int pageSize);
+}
+```
+
+
+
+创建impl 实现这两个接口
+
+
+
