系统架子搭建

--- a/系统架子构建.md
+++ b/系统架子构建.md
@@ -558,3 +558,319 @@ public interface ShopCategoryService {
 
 
 
+combine
+
+```java
+package com.spring.entity.dto;
+
+import com.spring.entity.bo.HeadLine;
+import com.spring.entity.bo.ShopCategory;
+import lombok.Data;
+
+import java.util.List;
+
+@Data
+public class MainPageInfoDto {
+    private List<HeadLine> headLineList;
+    private List<ShopCategory> shopCategoryList;
+}
+```
+
+
+
+
+```java
+package com.spring.service.combine;
+
+import com.spring.entity.dto.MainPageInfoDto;
+import com.spring.entity.dto.Result;
+
+public interface HeadLineShopCategoryCombineService {
+    Result<MainPageInfoDto> getMainPageInfo();
+}
+```
+
+
+
+```java
+package com.spring.service.combine.impl;
+
+import com.spring.entity.bo.HeadLine;
+import com.spring.entity.bo.ShopCategory;
+import com.spring.entity.dto.MainPageInfoDto;
+import com.spring.entity.dto.Result;
+import com.spring.service.combine.HeadLineShopCategoryCombineService;
+import com.spring.service.solo.HeadLineService;
+import com.spring.service.solo.ShopCategoryService;
+
+import java.util.List;
+
+public class HeadLineShopCategoryCombineServiceImpl implements HeadLineShopCategoryCombineService {
+    private HeadLineService headLineService;
+    private ShopCategoryService shopCategoryService;
+    @Override
+    public Result<MainPageInfoDto> getMainPageInfo() {
+        // 1 获取头条列表
+        HeadLine headLineCondition = new HeadLine();
+        headLineCondition.setEnableStatus(1);
+        Result<List<HeadLine>> HeadLineResult = headLineService.queryHeadLine(headLineCondition,1,4);
+        // 2 获取店铺类别列表
+        ShopCategory shopCategoryCondition = new ShopCategory();
+        Result<List<ShopCategory>> shopCategoryResult = shopCategoryService.queryShopCategory(shopCategoryCondition,1,100);
+        //3.合并两者并返回
+        Result<MainPageInfoDto> result = mergeMainPageInfoResult(HeadLineResult, shopCategoryResult);
+        return result;
+    }
+
+    private Result<MainPageInfoDto> mergeMainPageInfoResult(Result<List<HeadLine>> headLineResult, Result<List<ShopCategory>> shopCategoryResult) {
+        return  null;
+    }
+}
+```
+
+
+
+
+
+## Controller层代码搭建
+
+## Servlet
+
+动态web资源开发技术
+
+![](/13.PNG)
+
+https://blog.csdn.net/u012345283/article/details/84490740
+
+
+
+## 减少Servlet的数量
+
+### 一个Servlet对应是一个实体类
+
+职责会不单一
+
+前端发送两次请求给不同的servlet处理
+
+将两个servlet合并成一个servlet
+
+## 一个Servlet对应一个页面
+
+如果一个页面出现两个get相同请求，则doGet方法指代不清晰
+
+## 参考SpringMVC ，仅通过DispatcherServlet进行请求派发
+
+拦截所有请求
+
+解析请求
+
+派发给对应的Controller里面的方法进行处理
+
+/ 不会对jsp请求进行拦截
+
+/*
+
+https://www.cnblogs.com/yuanyee/p/6163943.html
+
+https://blog.csdn.net/jianggujin/article/details/50887811
+
+https://blog.csdn.net/u011597659/article/details/78301223
+
+   1.springmvc请所有的请求都提交给DispatcherServlet,它会委托应用系统的其他模块负责负责对请求进行真正的处理工作。
+
+　　2.DispatcherServlet查询一个或多个HandlerMapping,找到处理请求的Controller.
+
+　　3.DispatcherServlet请请求提交到目标Controller
+
+　　4.Controller进行业务逻辑处理后，会返回一个ModelAndView
+
+　　5.Dispathcher查询一个或多个ViewResolver视图解析器,找到ModelAndView对象指定的视图对象
+
+　　6.视图对象负责渲染返回给客户端。
+
+
+
+
+
+
+
+```java
+package com.spring.controller;
+
+import lombok.extern.slf4j.Slf4j;
+
+import javax.servlet.annotation.WebServlet;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+
+// 拦截所有请求
+@Slf4j
+@WebServlet("/")
+public class DispatcherServlet extends HttpServlet {
+    @Override
+    public void init(){
+        System.out.println("拦截所有请求");
+    }
+    @Override
+    protected void service(HttpServletRequest req, HttpServletResponse resp) {
+        System.out.println("request path is : " + req.getServletPath());
+        System.out.println("request method is : " + req.getMethod());
+    }
+}
+```
+
+
+
+
+
+
+
+```java
+package com.spring.controller.frontend;
+
+import com.spring.entity.dto.MainPageInfoDto;
+import com.spring.entity.dto.Result;
+import com.spring.service.combine.HeadLineShopCategoryCombineService;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+public class MainPageController {
+    private HeadLineShopCategoryCombineService headLineShopCategoryCombineService;
+    public Result<MainPageInfoDto> getMainPageInfo(HttpServletRequest req, HttpServletResponse resp) {
+        return headLineShopCategoryCombineService.getMainPageInfo();
+    }
+}
+```
+
+
+
+```java
+package com.spring.controller.superadmin;
+
+import com.spring.entity.bo.HeadLine;
+import com.spring.entity.dto.Result;
+import com.spring.service.solo.HeadLineService;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import java.util.List;
+
+public class HeadLineOperationController {
+    private HeadLineService headLineService;
+
+    public Result<Boolean> addHeadLine(HttpServletRequest req, HttpServletResponse resp){
+        //TODO:参数校验以及请求参数转化
+        return headLineService.addHeadLine(new HeadLine());
+    };
+    public Result<Boolean> removeHeadLine(HttpServletRequest req, HttpServletResponse resp){
+        //TODO:参数校验以及请求参数转化
+        return headLineService.removeHeadLine(1);
+    }
+    public Result<Boolean> modifyHeadLine(HttpServletRequest req, HttpServletResponse resp){
+        //TODO:参数校验以及请求参数转化
+        return headLineService.modifyHeadLine(new HeadLine());
+    }
+    public Result<HeadLine> queryHeadLineById(HttpServletRequest req, HttpServletResponse resp){
+        //TODO:参数校验以及请求参数转化
+        return headLineService.queryHeadLineById(1);
+    }
+    public Result<List<HeadLine>>queryHeadLine(HttpServletRequest req, HttpServletResponse resp){
+        //TODO:参数校验以及请求参数转化
+        return headLineService.queryHeadLine(null, 1, 100);
+    }
+}
+```
+
+
+
+
+
+```java
+package com.spring.controller.superadmin;
+
+
+import com.spring.entity.bo.ShopCategory;
+import com.spring.entity.dto.Result;
+import com.spring.service.solo.ShopCategoryService;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import java.util.List;
+
+
+public class ShopCategoryOperationController {
+    private ShopCategoryService shopCategoryService;
+    public Result<Boolean> addShopCategory(HttpServletRequest req, HttpServletResponse resp){
+        //TODO:参数校验以及请求参数转化
+        return shopCategoryService.addShopCategory(new ShopCategory());
+    }
+    public Result<Boolean> removeShopCategory(HttpServletRequest req, HttpServletResponse resp){
+        //TODO:参数校验以及请求参数转化
+        return shopCategoryService.removeShopCategory(1);
+    }
+    public Result<Boolean> modifyShopCategory(HttpServletRequest req, HttpServletResponse resp){
+        //TODO:参数校验以及请求参数转化
+        return shopCategoryService.modifyShopCategory(new ShopCategory());
+    }
+    public Result<ShopCategory> queryShopCategoryById(HttpServletRequest req, HttpServletResponse resp){
+        //TODO:参数校验以及请求参数转化
+        return shopCategoryService.queryShopCategoryById(1);
+    }
+    public Result<List<ShopCategory>> queryShopCategory(HttpServletRequest req, HttpServletResponse resp){
+        //TODO:参数校验以及请求参数转化
+        return shopCategoryService.queryShopCategory(null, 1, 100);
+    }
+}
+```
+
+
+
+
+
+
+
+```java
+package com.spring.controller;
+
+import com.spring.controller.frontend.MainPageController;
+import com.spring.controller.superadmin.HeadLineOperationController;
+import lombok.extern.slf4j.Slf4j;
+
+import javax.servlet.annotation.WebServlet;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+
+// 拦截所有请求
+@Slf4j
+@WebServlet("/")
+public class DispatcherServlet extends HttpServlet {
+    @Override
+    public void init(){
+        System.out.println("拦截所有请求");
+    }
+    @Override
+    protected void service(HttpServletRequest req, HttpServletResponse resp) {
+        System.out.println("request path is : " + req.getServletPath());
+        System.out.println("request method is : " + req.getMethod());
+        if (req.getServletPath() == "/frontend/getmainpageinfo" && req.getMethod() == "GET"){
+            new MainPageController().getMainPageInfo(req, resp);
+        } else if(req.getServletPath() == "/superadmin/addheadline" && req.getMethod() == "POST"){
+            new HeadLineOperationController().addHeadLine(req, resp);
+        }
+    }
+}
+```
+
+
+
+根据路径来派发
+
+
+
+应该改成equal
+
